force-app/main/default/objects/Data_Object__c/Data_Object__c.object-meta.xml
<CustomObject>
    <label>Data Object</label>
    <nameField>
        <label>Data Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>