force-app/main/default/objects/Data_Object__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if the object is a custom object, false if it is a standard object.</description>
    <inlineHelpText>Returns true if the object is a custom object, false if it is a standard object.</inlineHelpText>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>