force-app/main/default/objects/Data_Object__c/fields/Custom_Definition__c.field-meta.xml
<CustomField>
    <fullName>Custom_Definition__c</fullName>
    <description>Custom Definition of the Object</description>
    <label>Custom Definition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>