force-app/main/default/objects/Data_Object__c/fields/Custom_Setting__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if the object is a custom setting, false otherwise.</description>
    <inlineHelpText>Returns true if the object is a custom setting, false otherwise.</inlineHelpText>
    <label>Custom Setting</label>
    <type>Checkbox</type>
</CustomField>