force-app/main/default/objects/Data_Object__c/fields/Feed_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Feed_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if Chatter feeds are enabled for the object, false otherwise. This method is only available for Apex classes and triggers saved using SalesforceAPI version 19.0 and later.</description>
    <inlineHelpText>Returns true if Chatter feeds are enabled for the object, false otherwise. This method is only available for Apex classes and triggers saved using SalesforceAPI version 19.0 and later.</inlineHelpText>
    <label>Feed Enabled</label>
    <type>Checkbox</type>
</CustomField>