force-app/main/default/objects/Data_Object__c/fields/Has_Subtypes__c.field-meta.xml
<CustomField>
    <fullName>Has_Subtypes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the object has subtypes. The Account object, which has subtype PersonAccount, is the only object that will return true.</description>
    <inlineHelpText>Indicates whether the object has subtypes. The Account object, which has subtype PersonAccount, is the only object that will return true.</inlineHelpText>
    <label>Has Subtypes</label>
    <type>Checkbox</type>
</CustomField>