force-app/main/default/objects/Data_Object__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Returns the object&apos;s label, which may or may not match the object name.</description>
    <inlineHelpText>Returns the object&apos;s label, which may or may not match the object name.</inlineHelpText>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>