force-app/main/default/objects/Data_Object__c/fields/Label_Plural__c.field-meta.xml
<CustomField>
    <fullName>Label_Plural__c</fullName>
    <description>Returns the object&apos;s plural label, which may or may not match the object name.</description>
    <inlineHelpText>Returns the object&apos;s plural label, which may or may not match the object name.</inlineHelpText>
    <label>Label Plural</label>
    <type>TextArea</type>
</CustomField>