force-app/main/default/objects/Data_Object__c/fields/Mergeable__c.field-meta.xml
<CustomField>
    <fullName>Mergeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if the object can be merged with other objects of its type by the current user, false otherwise. true is returned for leads, contacts, and accounts.</description>
    <inlineHelpText>Returns true if the object can be merged with other objects of its type by the current user, false otherwise. true is returned for leads, contacts, and accounts.</inlineHelpText>
    <label>Mergeable</label>
    <type>Checkbox</type>
</CustomField>