force-app/main/default/objects/Data_Object__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <description>Three-character prefix code for the object. Record IDs are prefixed with three-character codes that specify the type of the object (for example, accounts have a prefix of 001 and opportunities have a prefix of 006).</description>
    <inlineHelpText>Three-character prefix code for the object. Record IDs are prefixed with three-character codes that specify the type of the object (for example, accounts have a prefix of 001 and opportunities have a prefix of 006)</inlineHelpText>
    <label>Prefix</label>
    <type>TextArea</type>
</CustomField>