force-app/main/default/objects/Data_Object__c/fields/Record_Type_Dev_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Dev_Names__c</fullName>
    <description>Record Type developer names</description>
    <inlineHelpText>Record Type developer names</inlineHelpText>
    <label>Record Type Dev Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>