force-app/main/default/objects/Data_Object__c/fields/Record_Type_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Names__c</fullName>
    <description>Record Type Labels</description>
    <inlineHelpText>Record Type Labels</inlineHelpText>
    <label>Record Type Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>