force-app/main/default/objects/Data_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Prefix__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>