force-app/main/default/objects/Data_Object__c/listViews/Andy_Objects.listView-meta.xml
<ListView>
    <fullName>Andy_Objects</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Custom_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>__c</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>__e</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>ChangeEvent</value>
    </filters>
    <filters>
        <field>Custom_Setting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Custom Objects</label>
</ListView>