force-app/main/default/objects/Data_Object__c/listViews/Change_Events.listView-meta.xml
<ListView>
    <fullName>Change_Events</fullName>
    <columns>NAME</columns>
    <columns>Custom_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ChangeEvent</value>
    </filters>
    <label>Change Events</label>
</ListView>