force-app/main/default/objects/Data_Object__c/listViews/Custom_MDT.listView-meta.xml
<ListView>
    <fullName>Custom_MDT</fullName>
    <columns>NAME</columns>
    <columns>Custom_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>__mdt</value>
    </filters>
    <label>Custom MDT</label>
</ListView>