force-app/main/default/objects/Data_Object__c/listViews/Custom_Settings.listView-meta.xml
<ListView>
    <fullName>Custom_Settings</fullName>
    <columns>NAME</columns>
    <columns>Custom_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Custom_Setting__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Custom Settings</label>
</ListView>