force-app/main/default/objects/Data_Object__c/listViews/Customer_to_Client.listView-meta.xml
<ListView>
    <fullName>Customer_to_Client</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Custom_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Label__c</field>
        <operation>contains</operation>
        <value>customer</value>
    </filters>
    <label>Customer to Client</label>
</ListView>