force-app/main/default/objects/Data_Object__c/listViews/Standard_Objects.listView-meta.xml
<ListView>
    <fullName>Standard_Objects</fullName>
    <columns>NAME</columns>
    <columns>Prefix__c</columns>
    <columns>Custom_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>ChangeEvent</value>
    </filters>
    <filters>
        <field>Custom_Setting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>__c</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>__e</value>
    </filters>
    <filters>
        <field>Custom__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Share</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>History</value>
    </filters>
    <label>Standard Objects</label>
</ListView>